objects/Blog_Authors__c/Blog_Authors__c.object-meta.xml
<CustomObject>
    <description>Store details about contributors to the community blog.</description>
    <label>Blog Author</label>
    <nameField>
        <label>Blog Contributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blog Authors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>