objects/Blog_Authors__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <description>Biography of the blog author</description>
    <label>Bio</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>