objects/Blog_Authors__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Name of the company related to the blog contributor.</description>
    <label>Company</label>
    <length>120</length>
    <type>Text</type>
</CustomField>