objects/Blog_Authors__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of the blog contributor</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>