objects/Blog_Authors__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <description>Picture of the blog post author used in the blog post.</description>
    <label>Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>