objects/Blog_Authors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Picture__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>